--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,9 +2,8 @@ name: Generate Snake Animation 🐍
 
 on:
   schedule:
-    # Jalan otomatis setiap tengah malam (UTC)
-    - cron: "0 0 * * *"
-  workflow_dispatch:  # Bisa dijalankan manual dari tab "Actions"
+    - cron: "0 0 * * *"  # jalan tiap tengah malam UTC
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -20,14 +19,14 @@ jobs:
       - name: Generate Snake Animation
         uses: Platane/snk@v3
         with:
-          github_user_name: Geraldoafrinandi   # GANTI dengan username GitHub kamu
-          outputs: dist/snake.svg
-          color_snake: "#00FFFF"
-          color_dots: "#00FFAA,#00FFFF,#0077FF,#0F0"  # Warna neon cyberpunk
+          github_user_name: Geraldoafrinandi  
+          outputs: |
+            dist/snake.svg
+            dist/snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload to GitHub Pages
+      - name: Push Snake Animation to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
